UI Update Index HTML and Style.css to have red col

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Task Git 1</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Website for git</h1>
+    <h1 class="red-color" style="text-align: center;">Website for git</h1>
 </body>
 </html>
